--- a/experiment/simulation/helper/temp.html
+++ b/experiment/simulation/helper/temp.html
@@ -4,41 +4,160 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <link rel="stylesheet" href="sliders.css">
+    <style>
+      :root {
+        --light-color: #c9bafc;
+        --mid-color: #9f91cc;
+        --dark-color: #3d246c;
+        --size: 30;
+        --trans: ease;
+      }
+
+      .main-spinner {
+        width: calc(var(--size) * 1vmin);
+        height: calc(var(--size) * 1vmin);
+        position: relative;
+      }
+
+      .main-spinner:before {
+        content: "";
+        background: var(--mid-color);
+        width: 50%;
+        height: 50%;
+        position: absolute;
+        left: 0%;
+        top: 0%;
+        transform-origin: right bottom;
+        animation: shadow 4s var(--trans) 0s infinite;
+      }
+
+      .main-spinner:after {
+        content: "";
+        background: var(--mid-color);
+        width: 33.33%;
+        height: 33.33%;
+        position: absolute;
+        left: 50%;
+        top: 16.66%;
+        transform-origin: left bottom;
+        animation: shadow 4s var(--trans) 1s infinite;
+        transform: scale(0);
+        z-index: -1;
+      }
+
+      .main-spinner .loader {
+        width: calc(var(--size) * 0.5vmin);
+        height: calc(var(--size) * 0.5vmin);
+        background: var(--dark-color);
+        transform-origin: right bottom;
+        animation: outer 4s var(--trans) 0s infinite;
+        position: relative;
+      }
+
+      .main-spinner .loader span {
+        width: 50%;
+        height: 50%;
+        display: block;
+        background: var(--light-color);
+        transform-origin: right bottom;
+        animation: inner 1s ease-in-out 0.5s infinite;
+        top: 50%;
+        left: 50%;
+        position: absolute;
+      }
+
+      .main-spinner a {
+        position: absolute;
+        font-size: 1.5vmin;
+        text-shadow: 0 0px 0 #000;
+        bottom: 5vmin;
+        font-family: Arial, Helvetica, serif;
+        text-decoration: none;
+        background: #111;
+        color: #fff;
+        padding: 1.25vmin 1.5vmin;
+        text-transform: uppercase;
+      }
+
+      .main-spinner a:hover {
+        background: #999;
+        color: #222;
+        text-shadow: -1px 0px 0 #fff8;
+      }
+
+      .main-spinner a span {
+        color: #454545;
+      }
+
+      @keyframes outer {
+        0% {
+          transform: rotate(0deg) scale(1);
+        }
+        12.5% {
+          transform: rotate(90deg) scale(1);
+        }
+        25% {
+          transform: rotate(90deg) scale(0.75);
+        }
+        37.5% {
+          transform: rotate(180deg) scale(0.75);
+        }
+        50% {
+          transform: rotate(180deg) scale(0.5);
+        }
+        62.5% {
+          transform: rotate(270deg) scale(0.5);
+        }
+        75% {
+          transform: rotate(270deg) scale(0.25);
+        }
+        87.5% {
+          transform: rotate(360deg) scale(0.25);
+        }
+        100% {
+          transform: rotate(360deg) scale(1);
+        }
+      }
+
+      @keyframes inner {
+        50%,
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      @keyframes shadow {
+        0%,
+        8.25% {
+          transform: scale(0);
+        }
+        16.5% {
+          transform: scale(1);
+        }
+        49.5% {
+          transform: scale(0);
+        }
+        50% {
+          transform: scale(0) rotate(180deg);
+        }
+        50.5%,
+        58.25% {
+          transform: scale(0) rotate(180deg);
+        }
+        66.5% {
+          transform: scale(0.5) rotate(180deg);
+        }
+        100% {
+          transform: scale(0) rotate(180deg);
+        }
+      }
+    </style>
   </head>
   <body>
-    <div class="universal-slider">
-      <img class="slider-circuit" src="./img/slider_circuit.png" alt="">
-      <div class="slider">
-        <img type="range" class="slider_V">
-        <div class="v">
-          <img src="./img/slider_V_back.png" alt="" class="meter">
-          <img src="./img/slider_V_arrow.png" class="slider-V-arrow slider-v-r1">
-          <div class="value-box">
-            <input type="text" value="24" min="24" max="72" readonly>
-            <span>V</span>
-          </div>
-        </div>
-        <div class="d">
-          <input type="range" class="slider_D range-slider" step="0.01" min="0.1" max="0.95" value="0.1">
-          <img src="./img/slider_D_blank.png" class="slider-D-arrow">
-          <div class="value-box">
-            <!-- <span>0</span> -->
-            <input type="text" value="0.1" min="0.1" max="0.95" onfocusout="">
-          </div>
-        </div>
-        <div class="r">
-          <input type="range" class="slider_R" step="1" min="50" max="500" value="50">
-          <img src="./img/slider_R_arrow.png" class="slider-R-arrow">
-          <div class="value-box">
-            <input type="text" value="50" min="50" max="500" onfocusout="">
-            <span>𝜴</span>
-          </div>
-        </div>
+    <div class="main-spinner">
+      <div class="loader">
+        <span></span>
       </div>
     </div>
-    <script src="sliders.js"></script>
   </body>
 </html>
